--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,10 @@ on:
 
 jobs:
   build-and-test:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -28,8 +31,8 @@ jobs:
           version: latest
           install-only: true
 
-      - name: Run lint
-        run: just lint
-
       - name: Run tests
         run: just test
+
+      - name: Run lint
+        run: just lint
