--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -8,6 +8,17 @@ builds:
     binary: vibes
     env:
       - CGO_ENABLED=0
+    goos:
+      - linux
+      - darwin
+      - windows
+      - freebsd
+      - openbsd
+      - netbsd
+    goarch:
+      - amd64
+      - arm64
+      - "386"
 
 archives:
   - id: vibes
