--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,4 +58,4 @@ jobs:
       - name: Run golangci-lint (Windows)
         if: runner.os == 'Windows'
         shell: pwsh
-        run: golangci-lint run --timeout=5m --out-format colored-line-number
+        run: golangci-lint run --timeout=10m --out-format=colored-line-number
