--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,10 +27,7 @@ jobs:
           tool: just
 
       - name: Install golangci-lint
-        uses: golangci/golangci-lint-action@v4
-        with:
-          version: latest
-          install-only: true
+        run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
 
       - name: Run tests (Just)
         if: runner.os != 'Windows'
