--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,3 +56,23 @@ jobs:
         if: runner.os == 'Windows'
         shell: pwsh
         run: golangci-lint run --timeout=10m --out-format=colored-line-number
+
+  quality-gates:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version-file: go.mod
+
+      - name: Gate examples coverage
+        run: go test ./vibes -run 'TestExamples|TestDocsExampleSnippetsCompile'
+
+      - name: Gate parser fuzz target
+        run: go test ./vibes -run '^$' -fuzz=FuzzCompileScriptDoesNotPanic -fuzztime=5s
+
+      - name: Gate runtime fuzz target
+        run: go test ./vibes -run '^$' -fuzz=FuzzRuntimeEdgeCasesDoNotPanic -fuzztime=5s
