--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -80,6 +80,20 @@ jobs:
         shell: pwsh
         run: golangci-lint run --timeout=10m --out-format=colored-line-number
 
+  race-detector:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version-file: go.mod
+
+      - name: Run race detector
+        run: go test -race ./...
+
   quality-gates:
     runs-on: ubuntu-latest
     steps:
